--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,24 @@
 </head>
 
 <body>
+<header class="header">
   <form id="search-form">
-    <input type="text" id="search-input" placeholder="Search...">
+    <input type="text" 
+    id="search-input" 
+    laceholder="Search...">
     <button type="submit" id="search-button">Search</button>
   </form>
+</header>
 
-  <div class="gallery"></div>
+    <main class="main-content">
+      <section class="section">
+        <div class="container">
+          <div class="gallery">
+          
+          </div>
+        </div>
+      </section>
+    </main>
 
   <button type="button"style = 'display: none' class ="loadMore">Load more</button>
   
